# movie_database

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Caddyfile  Dockerfile  README.md  compose.core.yml  compose.dev.yml  compose.prod.yml  compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  release-please-config.json  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  lint-pr.yml  pre-commit-update.yml  release-please.yml  test.yml
core/: api.py  asgi.py  settings.py  settings_development.py  settings_production.py  settings_testing.py  urls.py
core/movie_database/: models.py
core/movie_database/tests/: test_core.py
docker/: .env.example  Dockerfile  compose.core.yml  compose.dev.yml  compose.prod.yml
docker/tests/: goss.yaml  goss_wait.yaml  test_docker.py
frontend/: pnpm-lock.yaml
movie_database/: api.py  apps.py  conftest.py  models.py  schema.py  test_api.py  test_models.py
movie_database/api/: __init__.py  bookcase.py  collection.py  movie.py  physical_media.py  responses.py  shelf.py
movie_database/management/commands/: import_movies.py  test_import_movies.py
movie_database/migrations/: 0001_initial.py  0001_squashed_0008_alter_movie_release_year.py  0002_bookcase_mediacasedimensions_alter_collection_name_and_more.py  0003_add_media_dimensions.py  0004_alter_bookcase_description_alter_bookcase_location.py  0005_physicalmedia_case_dimensions.py  0006_remove_physicalmedia_media_format.py  0007_remove_collection_movies_collection_physical_media_and_more.py  0008_alter_movie_release_year.py  0009_remove_collection_physical_media_and_more.py  0010_shelfdimensions_shelf_dimensions.py  0011_shelf_orientation.py  0012_remove_tmdbprofile_adult.py  0013_movie_letterboxd_uri.py  0014_movie_watched.py  0015_movie_unique_movie.py  0016_alter_physicalmedia_case_dimensions_and_more.py  0017_alter_movie_options.py  0018_rename_mediacasedimensions_mediacasedimension.py  0019_rename_shelfdimensions_shelfdimension.py  0020_alter_mediacasedimension_depth_and_more.py  0021_remove_physicalmedia_unique_position_on_shelf_and_more.py  0022_rename_case_dimensions_physicalmedia_dimensions.py
movie_database/tests/: conftest.py  test_api.py  test_management_commands.py  test_models.py
typings/django/: __init__.pyi  shortcuts.pyi
typings/django/apps/: __init__.pyi  config.pyi  registry.pyi
typings/django/conf/: __init__.pyi
typings/django/conf/urls/: __init__.pyi
typings/django/contrib/auth/: backends.pyi  base_user.pyi  models.pyi  validators.pyi
typings/django/contrib/contenttypes/: fields.pyi  models.pyi
typings/django/contrib/postgres/fields/: array.pyi  citext.pyi  mixins.pyi
typings/django/contrib/sessions/backends/: base.pyi
typings/django/contrib/sites/: models.pyi
typings/django/core/: __init__.pyi  exceptions.pyi  validators.pyi  wsgi.pyi
typings/django/core/checks/: __init__.pyi  messages.pyi  model_checks.pyi  registry.pyi
typings/django/core/files/: __init__.pyi  base.pyi  images.pyi  storage.pyi  uploadedfile.pyi  uploadhandler.pyi  utils.pyi
typings/django/core/handlers/: base.pyi  wsgi.pyi
typings/django/core/servers/: basehttp.pyi
typings/django/db/: __init__.pyi  utils.pyi
typings/django/db/backends/: ddl_references.pyi  utils.pyi
typings/django/db/backends/base/: base.pyi  client.pyi  creation.pyi  features.pyi  introspection.pyi  schema.pyi  validation.pyi
typings/django/db/backends/postgresql/: base.pyi
typings/django/db/backends/sqlite3/: base.pyi
typings/django/db/migrations/: __init__.pyi  migration.pyi  state.pyi
typings/django/db/migrations/operations/: __init__.pyi  base.pyi  fields.pyi  models.pyi  special.pyi  utils.pyi
typings/django/db/models/: __init__.pyi  aggregates.pyi  base.pyi  constraints.pyi  deletion.pyi  enums.pyi  expressions.pyi  indexes.pyi  lookups.pyi  manager.pyi  options.pyi  query.pyi  query_utils.pyi  signals.pyi
typings/django/dispatch/: __init__.pyi  dispatcher.pyi
typings/django/forms/: __init__.pyi  boundfield.pyi  fields.pyi  forms.pyi  formsets.pyi  models.pyi  renderers.pyi  utils.pyi  widgets.pyi
typings/django/http/: __init__.pyi  cookie.pyi  request.pyi  response.pyi
typings/django/template/: __init__.pyi  base.pyi  context.pyi  defaultfilters.pyi  defaulttags.pyi  engine.pyi  exceptions.pyi  library.pyi  loader_tags.pyi  smartif.pyi  utils.pyi
typings/django/template/backends/: base.pyi  django.pyi  jinja2.pyi
typings/django/template/loaders/: base.pyi
typings/django/test/: __init__.pyi  client.pyi  runner.pyi  testcases.pyi  utils.pyi
typings/django/urls/: __init__.pyi  base.pyi  conf.pyi  converters.pyi  exceptions.pyi  resolvers.pyi  utils.pyi
typings/django/utils/: connection.pyi  datastructures.pyi  functional.pyi  html.pyi  safestring.pyi  tree.pyi  version.pyi
typings/django/views/: __init__.pyi
typings/django/views/generic/: base.pyi
typings/ninja/: __init__.pyi  conf.pyi  constants.pyi  decorators.pyi  errors.pyi  files.pyi  filter_schema.pyi  main.pyi  operation.pyi  pagination.pyi  parser.pyi  patch_dict.pyi  renderers.pyi  responses.pyi  router.pyi  schema.pyi  throttling.pyi  types.pyi  utils.pyi
typings/ninja/compatibility/: files.pyi  util.pyi
typings/ninja/openapi/: __init__.pyi  docs.pyi  schema.pyi  urls.pyi  views.pyi
typings/ninja/orm/: __init__.pyi  factory.pyi  fields.pyi  metaclass.pyi
typings/ninja/params/: __init__.pyi  functions.pyi  models.pyi
typings/ninja/security/: __init__.pyi  apikey.pyi  base.pyi  http.pyi  session.pyi
typings/ninja/signature/: __init__.pyi  details.pyi  utils.pyi
typings/ninja/testing/: __init__.pyi  client.pyi
(+21 files in other folders)
