[project]
authors = [{ name = "Mitchell Jensen" }]
dependencies = [
  "django (>=5.2,<6.0)",
  "django-ninja (>=1.4.3,<2)",
  "pydantic (>=2.11.7,<3)",
  "uvicorn (>=0.34.0,<0.36.0)",
]
description = ""
name = "movie-database"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.2.0"

[dependency-groups]
dev = [
  "beartype>=0.20.2,<0.21",
  "commitizen>=4.8.3,<5",
  "deptry>=0.23.0",
  "model-bakery>=1.20.4,<2",
  "pre-commit>=4.2.0,<5",
  "pytest-django>=4.11.1,<5",
  "pytest>=8.4.1,<9",
  "ruff>=0.12.3,<0.13",
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "manage.py",
  "node_modules",
  "site-packages",
  "venv",
]

indent-width = 4
line-length  = 160

target-version = "py313"

[tool.ruff.lint]
ignore = ["D100", "D104"]
select = ["ALL"]

fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/*.py" = ["D101", "RUF012"]
"test*.py"           = ["ANN201", "ARG", "D103", "FBT", "PLR2004", "S101", "S311"]

[tool.ruff.format]
docstring-code-format      = true
docstring-code-line-length = "dynamic"
indent-style               = "space"
line-ending                = "auto"
quote-style                = "double"
skip-magic-trailing-comma  = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
