[project]
authors = [{ name = "Mitchell Jensen" }]
dependencies = [
  "django (>=5.2,<6.0)",
  "django-ninja (>=1.4.3,<2)",
  "django-structlog (>=9.1.1,<10)",
  "django-stubs-ext (>=5.2.2,<6)",
  "django-types (>=0.22.0,<1)",
  "gunicorn (>=23.0.0,<24)",
  "psycopg[binary,pool] (>=3.2.9,<4)",
  "pydantic (>=2.11.7,<3)",
  "rich (>=14.1.0,<15)",
  "structlog (>=25.4.0,<26)",
  "uvicorn (>=0.34.0,<0.36.0)",
]
description = ""
name = "movie-database"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "0.5.0"

[dependency-groups]
dev = [
  "beartype>=0.20.2,<0.23",
  "commitizen>=4.8.3,<5",
  "deptry>=0.23.0,<1",
  "logot[pytest,structlog]>=1.5.1,<2",
  "model-bakery>=1.20.4,<2",
  "pre-commit>=4.2.0,<5",
  "pytest-asyncio>=1.1.0,<2",
  "pytest-cov>=6.2.1,<8",
  "pytest-django>=4.11.1,<5",
  "pytest>=8.4.1,<10",
  "ruff>=0.12.3,<0.13",
]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "manage.py",
  "node_modules",
  "site-packages",
  "venv",
]

indent-width = 4
line-length  = 160

target-version = "py313"

[tool.ruff.lint]
ignore = ["D100", "D104"]
select = ["ALL"]

fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/*.py" = ["D101", "RUF012"]
"test*.py"           = ["ANN201", "ARG", "D103", "FBT", "PLR2004", "S101", "S311"]

[tool.ruff.format]
docstring-code-format      = true
docstring-code-line-length = "dynamic"
indent-style               = "space"
line-ending                = "auto"
quote-style                = "double"
skip-magic-trailing-comma  = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings_testing"
asyncio_mode           = "auto"
logot_capturer         = "logot.structlog.StructlogCapturer"

[tool.pyright]
pythonPlatform   = "Linux"
pythonVersion    = "3.13"
typeCheckingMode = "strict"

[tool.typos.default.extend-words]
# don't autocorrect Django models objects async method names
"aadd"    = "aadd"
"acount"  = "acount"
"adelete" = "adelete"
"asave"   = "asave"
